[package]
name = "kalsa-bot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
teloxide = { version = "0.12.2", features = ["macros"]}
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
